# carbonara

./: #openCarbonara.sh#  .gitignore  CA_2_AA.py  CMakeLists.txt  CMakeListsBACKUP_prelib.txt  CarbonaraDataTools.py  README.md  RunMeInitial_EasyExample.sh  RunMeInitial_Lysozyme.sh  RunMeInitial_UreFab.sh  RunMe_CalmodulinMix_fitdata.sh  RunMe_DisulfideLinkagesExample_fitdata.sh  RunMe_EasyExample_testrun.sh  RunMe_Lyso_fit_lyso_test.sh  RunMe_Lysozyme_TestRun.sh  RunMe_cameron_test_case_fitSet1.sh  RunMe_humanSMARCAL1.sh  RunMe_latest.sh  RunMe_multi.sh  RunMe_smarcalTest.sh  RunMe_smcl_mol18_72.sh  RunMe_test_case_test_name.sh  RunMe_test_simple_fitdata.sh  SASDB_exploration.ipynb  carbonaraDefault.py  clearup_test.py  environment.yml  generate_structure  getInitialPrediction  inputProcessing.ipynb  makeFile.sh  makeFile_multi.sh  makeFingerPrintComparison.sh  mixtureProcessing.ipynb  openCarbonara.sh  outputProcessing.ipynb  predictStructureQvary  python_process_management.ipynb  readMeCarbonara.txt  requirements.txt  (+8 more)
.ipynb_checkpoints/: CarbonaraDataTools-checkpoint.py  heatshock_protein_setup-checkpoint.ipynb
Lysozyme/: Lysozyme.fasta  Lysozyme_dssp.txt
carbonara-setup/: CarbonaraDataTools.py  app.py
carbonarapy/: __init__.py  carbonara_wrapper.py
carbonarapy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
finalSrc/: #mainPredictionFinalAffineAndChange.cpp#  Flexible_generator.cpp  Logger.cpp  Logger.h  Main_function_dev.cpp  Refactored_makefile.cpp  experimentalData.cpp  experimentalData2.cpp  helpers.cpp  helpers.h  hydrationShellRandomTemp.cpp  independentFunctions.cpp  ktlMoleculeRandom.cpp  ktlMoleculeRandom.h  mainFileCompareFingerprints.cpp  mainPredictionFinalQvar.cpp  mainPredictionFinalQvar.cppNONWORKING.cpp  main_multi.cpp  moelculeFitAndState.cpp  moleculeFitAndState.cpp  moleculeFitAndState.h  optimizationPoint.cpp  parameters.cpp  parameters.h  polyHelix.cpp  randomMolGen.cpp  randomMolGen.h  skmt.h  writheFP.cpp  writheFP.h
legacyStuff/: RunMe_bsa.sh  RunMe_calmodulin_val.sh  RunMe_cmakeUpdateTest.sh  RunMe_search.sh  RunMe_test_multi_fitdata.sh  search_makefile.sh  valgrind_test.sh
paper_dummy_structures/: overall_c_turbo_colors  overall_figure_vmdstate
pdbFiles/: #01_62mer.pdb#  #01_62mer_00879.cif#  01_62mer_00383.cif  01_62mer_00425.cif  01_62mer_00643.cif  01_62mer_00785.cif  01_62mer_00879.cif  PastedGraphic-1.tiff
python_script_notebooks/: BPTI_validation.ipynb  CarbonaraDataTools.py  high_rmsd_mangled_files.csv  outputProcessing.ipynb  pyCarbonara.ipynb  python_process_management.ipynb  pythonrun_carb.py  search_algo_nb.ipynb
src/: Flexible_generator.cpp  Logger.cpp  Logger.h  algorithmRoutines.cpp  experimentalData.cpp  experimentalData.h  helpers.cpp  helpers.h  hydrationShellRandom.cpp  hydrationShellRandom.h  ktlMoleculeRandom.cpp  ktlMoleculeRandom.h  localWrithe.cpp  localWrithe.h  mainInitialPrediction.cpp  mainPredictionFinalQvar.cpp  moleculeFitAndState.cpp  moleculeFitAndState.h  molecule_interface.cpp  newScatteringTestBench.cpp  optimizationPoint.h  parameters.cpp  parameters.h  polyHelix.h  randomMolGen.cpp  skmt.cpp  (+4 more)
test_area/: CMakeLists.txt  test.py
test_area/src/: minimal_test.cpp
(+33 files in other folders)
